Add header section to homepage

--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wbpack Exercise</title>
+    <title>Group Capstone Project - 2</title>
+  
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+  <div class="header">
+    <div class="logo">
+      LOGO
+    </div>
+    <ul class="links">
+      <li><a href="">Profile</a></li>
+      <li><a href="">Contact</a></li>
+      <li><a href="">About me</a></li>
+    </ul>
+  </div>
 </body>
 </html>
