--- a/src/index.html
+++ b/src/index.html
@@ -17,5 +17,13 @@
       <li><a href="">About me</a></li>
     </ul>
   </div>
+  <div class="main">
+
+  </div>
+  <footer>
+    <div>
+      <p>Created by Chimezie & Tariq Under CC license</p>
+    </div>
+  </footer>
 </body>
 </html>
