--- a/src/index.html
+++ b/src/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Group Capstone Project - 2</title>
-  
-</head>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+<script defer src="index.bundle.js"></script></head>
 <body>
   <div class="header">
     <div class="logo">
@@ -17,8 +17,8 @@
       <li><a href="">About me</a></li>
     </ul>
   </div>
-  <div class="main">
-
+  <div class="main"></div>
+  <div class="grid-container">  
   </div>
   <footer>
     <div>
